# langchain_demo

./: .env  langchain_demo_v1.ipynb  main.py  pyproject.toml
docs/: langchain_demo_v1.md
