[project]
name = "demo-notebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jwt>=1.4.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.9",
    "nbconvert>=7.17.0",
    "notebook>=7.5.3",
    "pyjwt>=2.11.0",
]
